--- a/jane.csproj
+++ b/jane.csproj
@@ -28,5 +28,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5"/>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0"/>
   </ItemGroup>
 </Project>
