partial commit for TS

--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,6 @@ appsettings.json
 appsettings.Development.json
 */appsettings.Production.json
 appsettings.Production.json
+
+#DB migrations
+*/Migrations/*
